--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,4 @@
-.header{
+.header {
     height: 80px;
     background-color: #1C2B35;
     display: flex;
@@ -8,12 +8,27 @@
     padding-right: 140px;
 }
 
-.header a{
+.header a {
     color: #FFFFFF;
     text-decoration: none;
     font-size: 17px;
     margin-left: 36px;
 }
-.header a:hover{
+
+.header a:hover {
     color: orange;
+}
+
+.btn-logout {
+    margin-left: 20px;
+    color: #FFFFFF;
+    border: 1px solid #FFFFFF;
+    border-radius: 5px;
+    padding: 10px;
+    background-color: #1C2B35;
+}
+
+.btn-logout:hover {
+    color: #1C2B35;
+    background-color: #ffffff;
 }
